<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.menu.addStudent.AddStudent">
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/name"
        android:paddingStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/tel_numb"
        android:paddingStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_name"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/subject"
        android:paddingStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_phone_number"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/lessonsweek"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/lessons_week"
        android:paddingStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subject"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/scoolclas"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/scool_clas"
        android:paddingStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lessonsweek"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/valuelessons"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/value_lessons"
        android:paddingStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoolclas"
        tools:ignore="RtlSymmetry" />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fix"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/fix_week_days"
        android:textSize="14dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/valuelessons"
        app:layout_constraintWidth_percent="0.7"
        tools:ignore="RtlSymmetry" />

    <CheckBox
        android:id="@+id/fix_day_checkBox"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/fix"
        app:layout_constraintTop_toBottomOf="@id/valuelessons"
        app:layout_constraintWidth_percent="0.2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addStudent"
        android:background="#E8C114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fix"
        android:layout_marginTop="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>