<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    app:cardCornerRadius="3dp"
    android:layout_margin="2dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/name"
            style="@style/item_style"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
             />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/timewrite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/hour"
            style="@style/item_style"
            app:layout_constraintWidth_percent="0.08"
            app:layout_constraintStart_toEndOf="@+id/time"
            />



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/time"
            style="@style/item_style"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintStart_toEndOf="@+id/name"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lessons_numb"
            style="@style/item_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:text="numb"
            android:textColor="#D81B60"

            app:layout_constraintEnd_toStartOf="@+id/checkBox"
            app:layout_constraintStart_toEndOf="@id/timewrite"
            app:layout_constraintWidth_percent="0.08"
            tools:layout_editor_absoluteY="7dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/lessons_numb"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.13"/>




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>